# stock-market-streamlit

./: main.py  pyproject.toml
.streamlit/: config.toml
