[project]
name = "stock-market-streamlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keras>=3.10.0",
    "matplotlib>=3.10.3",
    "plotly>=6.2.0",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "streamlit>=1.46.1",
    "ta>=0.11.0",
    "tensorflow>=2.19.0",
    "yfinance>=0.2.64",
]
